Refactor Attendance module: remove AttendanceRequestDTO, simplify service and controller logic, integrate AttendanceMapper, and improve DTO structure.